auto-start added

--- a/project.properties
+++ b/project.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-16
-android.library.reference.1=../../tor/ActionBarSherlock-master/ActionBarSherlock-master/actionbarsherlock
+target=Google Inc.:Google APIs:19
+android.library.reference.1=external/actionbarsherlock
